// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyze Danceability "test/audio/scale-piano.wav" 1`] = `1.1009137630462646`;

exports[`Analyze Danceability "test/audio/scale-saw.wav" 1`] = `1.4916077852249146`;

exports[`Analyze Danceability "test/audio/scale-sin.wav" 1`] = `1.4916197061538696`;

exports[`Analyze Danceability "test/audio/scale-square.wav" 1`] = `1.491768717765808`;

exports[`Analyze Danceability "test/audio/scale-triangle.wav" 1`] = `1.4916062355041504`;

exports[`Analyze Danceability "test/audio/scale2-piano.wav" 1`] = `1.0301882028579712`;

exports[`Analyze Danceability "test/audio/scale2-saw.wav" 1`] = `1.2293025255203247`;

exports[`Analyze Danceability "test/audio/scale2-sin.wav" 1`] = `1.2316737174987793`;

exports[`Analyze Danceability "test/audio/scale2-square.wav" 1`] = `1.2305712699890137`;

exports[`Analyze Danceability "test/audio/scale2-triangle.wav" 1`] = `1.2317447662353516`;

exports[`Analyze Danceability "test/audio/velocity-piano.wav" 1`] = `0.8397646546363831`;

exports[`Analyze Danceability "test/audio/velocity-saw.wav" 1`] = `0.8700812458992004`;

exports[`Analyze Danceability "test/audio/velocity-sin.wav" 1`] = `0.869825541973114`;

exports[`Analyze Danceability "test/audio/velocity-square.wav" 1`] = `0.8699465990066528`;

exports[`Analyze Danceability "test/audio/velocity-triangle.wav" 1`] = `0.8698005676269531`;

exports[`Analyze Duration "test/audio/scale-piano.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale-saw.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale-sin.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale-square.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale-triangle.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale2-piano.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale2-saw.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale2-sin.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale2-square.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/scale2-triangle.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/velocity-piano.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/velocity-saw.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/velocity-sin.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/velocity-square.wav" 1`] = `8`;

exports[`Analyze Duration "test/audio/velocity-triangle.wav" 1`] = `8`;

exports[`Analyze Energy "test/audio/scale-piano.wav" 1`] = `1567.6304931640625`;

exports[`Analyze Energy "test/audio/scale-saw.wav" 1`] = `55246.71484375`;

exports[`Analyze Energy "test/audio/scale-sin.wav" 1`] = `84008.9765625`;

exports[`Analyze Energy "test/audio/scale-square.wav" 1`] = `100075.0625`;

exports[`Analyze Energy "test/audio/scale-triangle.wav" 1`] = `56004.390625`;

exports[`Analyze Energy "test/audio/scale2-piano.wav" 1`] = `1959.48193359375`;

exports[`Analyze Energy "test/audio/scale2-saw.wav" 1`] = `45086.625`;

exports[`Analyze Energy "test/audio/scale2-sin.wav" 1`] = `68524.546875`;

exports[`Analyze Energy "test/audio/scale2-square.wav" 1`] = `81642.2578125`;

exports[`Analyze Energy "test/audio/scale2-triangle.wav" 1`] = `45682.25`;

exports[`Analyze Energy "test/audio/velocity-piano.wav" 1`] = `342.1805419921875`;

exports[`Analyze Energy "test/audio/velocity-saw.wav" 1`] = `17524.001953125`;

exports[`Analyze Energy "test/audio/velocity-sin.wav" 1`] = `26328.845703125`;

exports[`Analyze Energy "test/audio/velocity-square.wav" 1`] = `31499.65625`;

exports[`Analyze Energy "test/audio/velocity-triangle.wav" 1`] = `17549.138671875`;

exports[`Analyze Key "test/audio/scale-piano.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale-saw.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale-sin.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale-square.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale-triangle.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale2-piano.wav" 1`] = `"F"`;

exports[`Analyze Key "test/audio/scale2-saw.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale2-sin.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale2-square.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/scale2-triangle.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/velocity-piano.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/velocity-saw.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/velocity-sin.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/velocity-square.wav" 1`] = `"C"`;

exports[`Analyze Key "test/audio/velocity-triangle.wav" 1`] = `"C"`;

exports[`Analyze Loudness "test/audio/scale-piano.wav" 1`] = `-25.142505645751953`;

exports[`Analyze Loudness "test/audio/scale-saw.wav" 1`] = `-8.667534828186035`;

exports[`Analyze Loudness "test/audio/scale-sin.wav" 1`] = `-7.181407451629639`;

exports[`Analyze Loudness "test/audio/scale-square.wav" 1`] = `-6.221879959106445`;

exports[`Analyze Loudness "test/audio/scale-triangle.wav" 1`] = `-8.916343688964844`;

exports[`Analyze Loudness "test/audio/scale2-piano.wav" 1`] = `-22.920133590698242`;

exports[`Analyze Loudness "test/audio/scale2-saw.wav" 1`] = `-9.128947257995605`;

exports[`Analyze Loudness "test/audio/scale2-sin.wav" 1`] = `-7.667166233062744`;

exports[`Analyze Loudness "test/audio/scale2-square.wav" 1`] = `-6.700174331665039`;

exports[`Analyze Loudness "test/audio/scale2-triangle.wav" 1`] = `-9.404030799865723`;

exports[`Analyze Loudness "test/audio/velocity-piano.wav" 1`] = `-31.488279342651367`;

exports[`Analyze Loudness "test/audio/velocity-saw.wav" 1`] = `-13.58476734161377`;

exports[`Analyze Loudness "test/audio/velocity-sin.wav" 1`] = `-12.513080596923828`;

exports[`Analyze Loudness "test/audio/velocity-square.wav" 1`] = `-11.325491905212402`;

exports[`Analyze Loudness "test/audio/velocity-triangle.wav" 1`] = `-14.237661361694336`;

exports[`Analyze Notes "test/audio/scale-piano.wav" 1`] = `
Array [
  Object {
    "duration": 0.9868480563163757,
    "loudness": -24.81425666809082,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.9984580278396606,
    "loudness": -20.84654998779297,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9926530718803406,
  },
  Object {
    "duration": 0.9897505640983582,
    "loudness": -21.659088134765625,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9969160556793213,
  },
]
`;

exports[`Analyze Notes "test/audio/scale-saw.wav" 1`] = `
Array [
  Object {
    "duration": 0.5195465087890625,
    "loudness": -6.251055717468262,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.5340589284896851,
    "loudness": -6.005706310272217,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9868480563163757,
  },
  Object {
    "duration": 0.5340589284896851,
    "loudness": -5.845691204071045,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9853061437606812,
  },
  Object {
    "duration": 0.5340589284896851,
    "loudness": -5.923262596130371,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.983764171600342,
  },
  Object {
    "duration": 0.11029478162527084,
    "loudness": -100,
    "midi": 86,
    "name": "D",
    "octave": 7,
    "start": 3.558458089828491,
  },
  Object {
    "duration": 0.12480725347995758,
    "loudness": -100,
    "midi": 87,
    "name": "D#",
    "octave": 7,
    "start": 3.689070224761963,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -5.732555389404297,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.9851248264312744,
  },
  Object {
    "duration": 0.5456689596176147,
    "loudness": -5.607730388641357,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.97777795791626,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -5.539801597595215,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.982040882110596,
  },
  Object {
    "duration": 0.5398639440536499,
    "loudness": -5.51409912109375,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 6.980498790740967,
  },
]
`;

exports[`Analyze Notes "test/audio/scale-sin.wav" 1`] = `
Array [
  Object {
    "duration": 0.5224489569664001,
    "loudness": -5.222713470458984,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -4.901303291320801,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9839455485343933,
  },
  Object {
    "duration": 0.5398639440536499,
    "loudness": -4.621132850646973,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9824036359786987,
  },
  Object {
    "duration": 0.5427664518356323,
    "loudness": -4.4725542068481445,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.977959156036377,
  },
  Object {
    "duration": 0.5427664518356323,
    "loudness": -4.26844596862793,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.982222318649292,
  },
  Object {
    "duration": 0.5427664518356323,
    "loudness": -4.039396286010742,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.980680465698242,
  },
  Object {
    "duration": 0.18866212666034698,
    "loudness": -100,
    "midi": 88,
    "name": "E",
    "octave": 7,
    "start": 5.784671306610107,
  },
  Object {
    "duration": 0.5427664518356323,
    "loudness": -3.9064481258392334,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.979138374328613,
  },
  Object {
    "duration": 0.5427664518356323,
    "loudness": -3.845414876937866,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 6.977596282958984,
  },
  Object {
    "duration": 0.14512471854686737,
    "loudness": -100,
    "midi": 87,
    "name": "D#",
    "octave": 7,
    "start": 7.5290703773498535,
  },
  Object {
    "duration": 0.16544218361377716,
    "loudness": -100,
    "midi": 87,
    "name": "D#",
    "octave": 7,
    "start": 7.679999828338623,
  },
]
`;

exports[`Analyze Notes "test/audio/scale-square.wav" 1`] = `
Array [
  Object {
    "duration": 0.5224489569664001,
    "loudness": -4.026019096374512,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -3.7953598499298096,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9839455485343933,
  },
  Object {
    "duration": 0.5398639440536499,
    "loudness": -3.542135715484619,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9824036359786987,
  },
  Object {
    "duration": 0.5398639440536499,
    "loudness": -3.467772960662842,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.9808616638183594,
  },
  Object {
    "duration": 0.5398639440536499,
    "loudness": -3.292682647705078,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.9851248264312744,
  },
  Object {
    "duration": 0.5398639440536499,
    "loudness": -3.150643825531006,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.983582973480225,
  },
  Object {
    "duration": 0.15383219718933105,
    "loudness": -100,
    "midi": 89,
    "name": "F",
    "octave": 7,
    "start": 5.604716777801514,
  },
  Object {
    "duration": 0.5427664518356323,
    "loudness": -3.043078899383545,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.979138374328613,
  },
  Object {
    "duration": 0.09868481010198593,
    "loudness": -100,
    "midi": 91,
    "name": "G",
    "octave": 7,
    "start": 6.65541934967041,
  },
  Object {
    "duration": 0.16544218361377716,
    "loudness": -100,
    "midi": 92,
    "name": "G#",
    "octave": 7,
    "start": 6.759909152984619,
  },
  Object {
    "duration": 0.5427664518356323,
    "loudness": -2.9890518188476562,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 6.977596282958984,
  },
  Object {
    "duration": 0.14512471854686737,
    "loudness": -100,
    "midi": 90,
    "name": "F#",
    "octave": 7,
    "start": 7.7380499839782715,
  },
]
`;

exports[`Analyze Notes "test/audio/scale-triangle.wav" 1`] = `
Array [
  Object {
    "duration": 0.5224489569664001,
    "loudness": -6.956298828125,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -6.64076042175293,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9839455485343933,
  },
  Object {
    "duration": 0.5427664518356323,
    "loudness": -6.360950469970703,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9795011281967163,
  },
  Object {
    "duration": 0.5398639440536499,
    "loudness": -6.216594696044922,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.977959156036377,
  },
  Object {
    "duration": 0.5427664518356323,
    "loudness": -6.01374626159668,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.982222318649292,
  },
  Object {
    "duration": 0.5398639440536499,
    "loudness": -5.784204959869385,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.980680465698242,
  },
  Object {
    "duration": 0.10158730298280716,
    "loudness": -100,
    "midi": 88,
    "name": "E",
    "octave": 7,
    "start": 5.619228839874268,
  },
  Object {
    "duration": 0.1160997748374939,
    "loudness": -100,
    "midi": 86,
    "name": "D",
    "octave": 7,
    "start": 5.726621150970459,
  },
  Object {
    "duration": 0.5427664518356323,
    "loudness": -5.661059379577637,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.979138374328613,
  },
  Object {
    "duration": 0.18285714089870453,
    "loudness": -100,
    "midi": 92,
    "name": "G#",
    "octave": 7,
    "start": 6.739591598510742,
  },
  Object {
    "duration": 0.5398639440536499,
    "loudness": -5.601083755493164,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 6.977596282958984,
  },
  Object {
    "duration": 0.09868481010198593,
    "loudness": -100,
    "midi": 91,
    "name": "G",
    "octave": 7,
    "start": 7.523265361785889,
  },
  Object {
    "duration": 0.09287981688976288,
    "loudness": -100,
    "midi": 91,
    "name": "G",
    "octave": 7,
    "start": 7.627755165100098,
  },
  Object {
    "duration": 0.20317460596561432,
    "loudness": -96.28007507324219,
    "midi": 93,
    "name": "A",
    "octave": 7,
    "start": 7.726439952850342,
  },
]
`;

exports[`Analyze Notes "test/audio/scale2-piano.wav" 1`] = `
Array [
  Object {
    "duration": 0.4963265359401703,
    "loudness": -23.90129852294922,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.49342402815818787,
    "loudness": -23.964317321777344,
    "midi": 61,
    "name": "C#",
    "octave": 5,
    "start": 0.5021315217018127,
  },
  Object {
    "duration": 0.49342402815818787,
    "loudness": -20.003761291503906,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 1.001360535621643,
  },
  Object {
    "duration": 0.4876190423965454,
    "loudness": -20.7101993560791,
    "midi": 63,
    "name": "D#",
    "octave": 5,
    "start": 1.5005896091461182,
  },
  Object {
    "duration": 0.49342402815818787,
    "loudness": -20.323192596435547,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9940135478973389,
  },
  Object {
    "duration": 0.49342402815818787,
    "loudness": -25.85008430480957,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.4932427406311035,
  },
  Object {
    "duration": 0.5050340294837952,
    "loudness": -25.854026794433594,
    "midi": 66,
    "name": "F#",
    "octave": 5,
    "start": 2.992471694946289,
  },
  Object {
    "duration": 0.5021315217018127,
    "loudness": -25.464801788330078,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.5033106803894043,
  },
  Object {
    "duration": 0.49342402815818787,
    "loudness": -26.338071823120117,
    "midi": 68,
    "name": "G#",
    "octave": 5,
    "start": 4.011247158050537,
  },
  Object {
    "duration": 0.49052155017852783,
    "loudness": -26.52617645263672,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.510476112365723,
  },
  Object {
    "duration": 0.48181405663490295,
    "loudness": -26.62118911743164,
    "midi": 70,
    "name": "A#",
    "octave": 5,
    "start": 5.006802558898926,
  },
]
`;

exports[`Analyze Notes "test/audio/scale2-saw.wav" 1`] = `
Array [
  Object {
    "duration": 0.26993197202682495,
    "loudness": -6.199894905090332,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.27863946557044983,
    "loudness": -6.195529937744141,
    "midi": 61,
    "name": "C#",
    "octave": 5,
    "start": 0.49052155017852783,
  },
  Object {
    "duration": 0.28154194355010986,
    "loudness": -6.004193305969238,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9868480563163757,
  },
  Object {
    "duration": 0.2844444513320923,
    "loudness": -6.014192581176758,
    "midi": 63,
    "name": "D#",
    "octave": 5,
    "start": 1.486077070236206,
  },
  Object {
    "duration": 0.2844444513320923,
    "loudness": -5.81291389465332,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9853061437606812,
  },
  Object {
    "duration": 0.2844444513320923,
    "loudness": -5.948215484619141,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.4845352172851562,
  },
  Object {
    "duration": 0.2873469293117523,
    "loudness": -5.864116668701172,
    "midi": 66,
    "name": "F#",
    "octave": 5,
    "start": 2.983764171600342,
  },
  Object {
    "duration": 0.2873469293117523,
    "loudness": -5.798451900482178,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.480090618133545,
  },
  Object {
    "duration": 0.2873469293117523,
    "loudness": -5.693889617919922,
    "midi": 68,
    "name": "G#",
    "octave": 5,
    "start": 3.9851248264312744,
  },
  Object {
    "duration": 0.2873469293117523,
    "loudness": -5.6671881675720215,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.484353542327881,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -5.59089469909668,
    "midi": 70,
    "name": "A#",
    "octave": 5,
    "start": 4.983582973480225,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -5.574883460998535,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.48281192779541,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -5.494965553283691,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 5.982040882110596,
  },
  Object {
    "duration": 0.11029478162527084,
    "loudness": -100,
    "midi": 92,
    "name": "G#",
    "octave": 7,
    "start": 6.3854875564575195,
  },
  Object {
    "duration": 0.13351473212242126,
    "loudness": -100,
    "midi": 91,
    "name": "G",
    "octave": 7,
    "start": 6.600272178649902,
  },
  Object {
    "duration": 0.20897959172725677,
    "loudness": -96.45146179199219,
    "midi": 89,
    "name": "F",
    "octave": 7,
    "start": 6.765714168548584,
  },
  Object {
    "duration": 0.11900226771831512,
    "loudness": -100,
    "midi": 92,
    "name": "G#",
    "octave": 7,
    "start": 7.39555549621582,
  },
  Object {
    "duration": 0.18575963377952576,
    "loudness": -100,
    "midi": 88,
    "name": "E",
    "octave": 7,
    "start": 7.520362854003906,
  },
  Object {
    "duration": 0.11319728195667267,
    "loudness": -100,
    "midi": 92,
    "name": "G#",
    "octave": 7,
    "start": 7.729342460632324,
  },
]
`;

exports[`Analyze Notes "test/audio/scale2-sin.wav" 1`] = `
Array [
  Object {
    "duration": 0.2728344798088074,
    "loudness": -5.218644618988037,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -5.083777904510498,
    "midi": 61,
    "name": "C#",
    "octave": 5,
    "start": 0.4847165644168854,
  },
  Object {
    "duration": 0.2873469293117523,
    "loudness": -4.934520244598389,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9839455485343933,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -4.737850189208984,
    "midi": 63,
    "name": "D#",
    "octave": 5,
    "start": 1.4831745624542236,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -4.609889030456543,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9795011281967163,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -4.460755348205566,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.4787302017211914,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -4.396100997924805,
    "midi": 66,
    "name": "F#",
    "octave": 5,
    "start": 2.977959156036377,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -4.285277843475342,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.4771881103515625,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -4.139553546905518,
    "midi": 68,
    "name": "G#",
    "octave": 5,
    "start": 3.982222318649292,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -4.050126552581787,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.481451034545898,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -4.004725456237793,
    "midi": 70,
    "name": "A#",
    "octave": 5,
    "start": 4.980680465698242,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -3.9164493083953857,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.479909420013428,
  },
  Object {
    "duration": 0.15092970430850983,
    "loudness": -100,
    "midi": 86,
    "name": "D",
    "octave": 7,
    "start": 5.819500923156738,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -3.865962266921997,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 5.979138374328613,
  },
  Object {
    "duration": 0.10739228874444962,
    "loudness": -100,
    "midi": 92,
    "name": "G#",
    "octave": 7,
    "start": 6.579954624176025,
  },
  Object {
    "duration": 0.11900226771831512,
    "loudness": -100,
    "midi": 90,
    "name": "F#",
    "octave": 7,
    "start": 6.968888759613037,
  },
  Object {
    "duration": 0.1160997748374939,
    "loudness": -100,
    "midi": 91,
    "name": "G",
    "octave": 7,
    "start": 7.093696117401123,
  },
  Object {
    "duration": 0.10448979586362839,
    "loudness": -100,
    "midi": 88,
    "name": "E",
    "octave": 7,
    "start": 7.224308490753174,
  },
  Object {
    "duration": 0.10158730298280716,
    "loudness": -100,
    "midi": 93,
    "name": "A",
    "octave": 7,
    "start": 7.386847972869873,
  },
  Object {
    "duration": 0.18285714089870453,
    "loudness": -100,
    "midi": 93,
    "name": "A",
    "octave": 7,
    "start": 7.4942402839660645,
  },
  Object {
    "duration": 0.1799546480178833,
    "loudness": -100,
    "midi": 90,
    "name": "F#",
    "octave": 7,
    "start": 7.6829023361206055,
  },
]
`;

exports[`Analyze Notes "test/audio/scale2-square.wav" 1`] = `
Array [
  Object {
    "duration": 0.2728344798088074,
    "loudness": -4.053289413452148,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.2873469293117523,
    "loudness": -3.9585461616516113,
    "midi": 61,
    "name": "C#",
    "octave": 5,
    "start": 0.4847165644168854,
  },
  Object {
    "duration": 0.2873469293117523,
    "loudness": -3.84665846824646,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9839455485343933,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -3.649003267288208,
    "midi": 63,
    "name": "D#",
    "octave": 5,
    "start": 1.4831745624542236,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -3.5436787605285645,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9824036359786987,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -3.4816718101501465,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.481632709503174,
  },
  Object {
    "duration": 0.2873469293117523,
    "loudness": -3.386488437652588,
    "midi": 66,
    "name": "F#",
    "octave": 5,
    "start": 2.9808616638183594,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -3.3001179695129395,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.480090618133545,
  },
  Object {
    "duration": 0.2873469293117523,
    "loudness": -3.254552125930786,
    "midi": 68,
    "name": "G#",
    "octave": 5,
    "start": 3.9851248264312744,
  },
  Object {
    "duration": 0.2873469293117523,
    "loudness": -3.163273572921753,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.484353542327881,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -3.100282907485962,
    "midi": 70,
    "name": "A#",
    "octave": 5,
    "start": 4.980680465698242,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -3.040487766265869,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.479909420013428,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -3.008523941040039,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 5.979138374328613,
  },
  Object {
    "duration": 0.10158730298280716,
    "loudness": -100,
    "midi": 88,
    "name": "E",
    "octave": 7,
    "start": 6.617687225341797,
  },
  Object {
    "duration": 0.14222222566604614,
    "loudness": -100,
    "midi": 92,
    "name": "G#",
    "octave": 7,
    "start": 6.742494106292725,
  },
  Object {
    "duration": 0.11900226771831512,
    "loudness": -100,
    "midi": 89,
    "name": "F",
    "octave": 7,
    "start": 7.534875392913818,
  },
  Object {
    "duration": 0.14512471854686737,
    "loudness": -100,
    "midi": 89,
    "name": "F",
    "octave": 7,
    "start": 7.659682750701904,
  },
]
`;

exports[`Analyze Notes "test/audio/scale2-triangle.wav" 1`] = `
Array [
  Object {
    "duration": 0.2728344798088074,
    "loudness": -6.940908432006836,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.2873469293117523,
    "loudness": -6.81123685836792,
    "midi": 61,
    "name": "C#",
    "octave": 5,
    "start": 0.4847165644168854,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -6.664209365844727,
    "midi": 62,
    "name": "D",
    "octave": 5,
    "start": 0.9839455485343933,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -6.4879560470581055,
    "midi": 63,
    "name": "D#",
    "octave": 5,
    "start": 1.4831745624542236,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -6.3631205558776855,
    "midi": 64,
    "name": "E",
    "octave": 5,
    "start": 1.9795011281967163,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -6.199332237243652,
    "midi": 65,
    "name": "F",
    "octave": 5,
    "start": 2.4787302017211914,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -6.139510154724121,
    "midi": 66,
    "name": "F#",
    "octave": 5,
    "start": 2.977959156036377,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -6.031960964202881,
    "midi": 67,
    "name": "G",
    "octave": 5,
    "start": 3.4771881103515625,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -5.8823323249816895,
    "midi": 68,
    "name": "G#",
    "octave": 5,
    "start": 3.982222318649292,
  },
  Object {
    "duration": 0.2931519150733948,
    "loudness": -5.794466972351074,
    "midi": 69,
    "name": "A",
    "octave": 5,
    "start": 4.481451034545898,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -5.760026931762695,
    "midi": 70,
    "name": "A#",
    "octave": 5,
    "start": 4.980680465698242,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -5.675989151000977,
    "midi": 71,
    "name": "B",
    "octave": 5,
    "start": 5.479909420013428,
  },
  Object {
    "duration": 0.29024943709373474,
    "loudness": -5.617671012878418,
    "midi": 72,
    "name": "C",
    "octave": 6,
    "start": 5.979138374328613,
  },
  Object {
    "duration": 0.10158730298280716,
    "loudness": -100,
    "midi": 87,
    "name": "D#",
    "octave": 7,
    "start": 6.275192737579346,
  },
  Object {
    "duration": 0.09287981688976288,
    "loudness": -100,
    "midi": 89,
    "name": "F",
    "octave": 7,
    "start": 6.382585048675537,
  },
  Object {
    "duration": 0.15383219718933105,
    "loudness": -100,
    "midi": 92,
    "name": "G#",
    "octave": 7,
    "start": 6.481269836425781,
  },
  Object {
    "duration": 0.1277097463607788,
    "loudness": -100,
    "midi": 91,
    "name": "G",
    "octave": 7,
    "start": 6.672834396362305,
  },
  Object {
    "duration": 0.21768707036972046,
    "loudness": -96.29215240478516,
    "midi": 88,
    "name": "E",
    "octave": 7,
    "start": 6.916644096374512,
  },
  Object {
    "duration": 0.10448979586362839,
    "loudness": -100,
    "midi": 92,
    "name": "G#",
    "octave": 7,
    "start": 7.203990936279297,
  },
  Object {
    "duration": 0.11319728195667267,
    "loudness": -100,
    "midi": 92,
    "name": "G#",
    "octave": 7,
    "start": 7.314285755157471,
  },
  Object {
    "duration": 0.10158730298280716,
    "loudness": -100,
    "midi": 91,
    "name": "G",
    "octave": 7,
    "start": 7.679999828338623,
  },
]
`;

exports[`Analyze Notes "test/audio/velocity-piano.wav" 1`] = `
Array [
  Object {
    "duration": 2.983764171600342,
    "loudness": -27.732011795043945,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 2.002721071243286,
    "loudness": -38.30886459350586,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 2.9895691871643066,
  },
  Object {
    "duration": 3.0040817260742188,
    "loudness": -47.692893981933594,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 4.9980950355529785,
  },
]
`;

exports[`Analyze Notes "test/audio/velocity-saw.wav" 1`] = `
Array [
  Object {
    "duration": 0.5195465087890625,
    "loudness": -6.2510666847229,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.528253972530365,
    "loudness": -7.880327224731445,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.9897505640983582,
  },
  Object {
    "duration": 0.528253972530365,
    "loudness": -9.91734504699707,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 1.9882086515426636,
  },
  Object {
    "duration": 0.528253972530365,
    "loudness": -12.592308044433594,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 2.986666679382324,
  },
  Object {
    "duration": 0.528253972530365,
    "loudness": -15.839130401611328,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 3.99092960357666,
  },
  Object {
    "duration": 0.12480725347995758,
    "loudness": -100,
    "midi": 91,
    "name": "G",
    "octave": 7,
    "start": 6.754104137420654,
  },
  Object {
    "duration": 0.15673469007015228,
    "loudness": -100,
    "midi": 84,
    "name": "C",
    "octave": 7,
    "start": 7.775782108306885,
  },
]
`;

exports[`Analyze Notes "test/audio/velocity-sin.wav" 1`] = `
Array [
  Object {
    "duration": 0.5224489569664001,
    "loudness": -5.222714424133301,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -6.904149055480957,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.9839455485343933,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -8.947423934936523,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 1.9824036359786987,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -11.621332168579102,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 2.9808616638183594,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -14.864002227783203,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 3.9851248264312744,
  },
  Object {
    "duration": 0.10158730298280716,
    "loudness": -100,
    "midi": 84,
    "name": "C",
    "octave": 7,
    "start": 6.588662147521973,
  },
  Object {
    "duration": 0.1160997748374939,
    "loudness": -100,
    "midi": 87,
    "name": "D#",
    "octave": 7,
    "start": 6.696054458618164,
  },
  Object {
    "duration": 0.14222222566604614,
    "loudness": -100,
    "midi": 89,
    "name": "F",
    "octave": 7,
    "start": 7.601632595062256,
  },
  Object {
    "duration": 0.09868481010198593,
    "loudness": -100,
    "midi": 90,
    "name": "F#",
    "octave": 7,
    "start": 7.78158712387085,
  },
  Object {
    "duration": 0.10739228874444962,
    "loudness": -100,
    "midi": 93,
    "name": "A",
    "octave": 7,
    "start": 7.886076927185059,
  },
]
`;

exports[`Analyze Notes "test/audio/velocity-square.wav" 1`] = `
Array [
  Object {
    "duration": 0.5224489569664001,
    "loudness": -4.026019096374512,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.5340589284896851,
    "loudness": -5.675666809082031,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.9868480563163757,
  },
  Object {
    "duration": 0.5340589284896851,
    "loudness": -7.718059062957764,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 1.9853061437606812,
  },
  Object {
    "duration": 0.5340589284896851,
    "loudness": -10.392852783203125,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 2.983764171600342,
  },
  Object {
    "duration": 0.5340589284896851,
    "loudness": -13.634469032287598,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 3.9880270957946777,
  },
  Object {
    "duration": 0.5340589284896851,
    "loudness": -17.15645980834961,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 4.986485481262207,
  },
  Object {
    "duration": 0.5340589284896851,
    "loudness": -25.271774291992188,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 5.984943389892578,
  },
  Object {
    "duration": 0.11900226771831512,
    "loudness": -100,
    "midi": 88,
    "name": "E",
    "octave": 7,
    "start": 7.845442295074463,
  },
]
`;

exports[`Analyze Notes "test/audio/velocity-triangle.wav" 1`] = `
Array [
  Object {
    "duration": 0.5224489569664001,
    "loudness": -6.956305503845215,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -8.62784194946289,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 0.9839455485343933,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -10.671550750732422,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 1.9824036359786987,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -13.34503173828125,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 2.9808616638183594,
  },
  Object {
    "duration": 0.5369614362716675,
    "loudness": -16.5881404876709,
    "midi": 60,
    "name": "C",
    "octave": 5,
    "start": 3.9851248264312744,
  },
  Object {
    "duration": 0.15673469007015228,
    "loudness": -100,
    "midi": 88,
    "name": "E",
    "octave": 7,
    "start": 6.623492240905762,
  },
  Object {
    "duration": 0.10739228874444962,
    "loudness": -100,
    "midi": 90,
    "name": "F#",
    "octave": 7,
    "start": 6.864398956298828,
  },
  Object {
    "duration": 0.16253967583179474,
    "loudness": -100,
    "midi": 93,
    "name": "A",
    "octave": 7,
    "start": 7.7003173828125,
  },
]
`;

exports[`Analyze Onsets "test/audio/scale-piano.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  3.006984233856201,
  4.005442142486572,
  5.003900051116943,
  6.002358436584473,
  7.000816345214844,
]
`;

exports[`Analyze Onsets "test/audio/scale-saw.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  3.9938321113586426,
  4.992290019989014,
  5.990748405456543,
  6.989206314086914,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale-sin.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  3.9938321113586426,
  4.992290019989014,
  5.990748405456543,
  6.989206314086914,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale-square.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  3.9938321113586426,
  4.992290019989014,
  5.990748405456543,
  6.989206314086914,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale-triangle.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  3.9938321113586426,
  4.992290019989014,
  5.990748405456543,
  6.989206314086914,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale2-piano.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.4992290139198303,
  0.9984580278396606,
  1.4976871013641357,
  1.9969160556793213,
  2.496145009994507,
  2.9953742027282715,
  3.5062131881713867,
  4.005442142486572,
  4.504671096801758,
  5.003900051116943,
  5.503129482269287,
  6.002358436584473,
]
`;

exports[`Analyze Onsets "test/audio/scale2-saw.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.4992290139198303,
  0.9984580278396606,
  1.4976871013641357,
  1.9969160556793213,
  2.496145009994507,
  2.9953742027282715,
  3.494603157043457,
  3.9938321113586426,
  4.493061065673828,
  4.992290019989014,
  5.491519451141357,
  5.990748405456543,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale2-sin.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.4992290139198303,
  0.9984580278396606,
  1.4976871013641357,
  1.9969160556793213,
  2.496145009994507,
  2.9953742027282715,
  3.494603157043457,
  3.9938321113586426,
  4.493061065673828,
  4.992290019989014,
  5.491519451141357,
  5.990748405456543,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale2-square.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.4992290139198303,
  0.9984580278396606,
  1.4976871013641357,
  1.9969160556793213,
  2.496145009994507,
  2.9953742027282715,
  3.494603157043457,
  3.9938321113586426,
  4.493061065673828,
  4.992290019989014,
  5.491519451141357,
  5.990748405456543,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/scale2-triangle.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.4992290139198303,
  0.9984580278396606,
  1.4976871013641357,
  1.9969160556793213,
  2.496145009994507,
  2.9953742027282715,
  3.494603157043457,
  3.9938321113586426,
  4.493061065673828,
  4.992290019989014,
  5.491519451141357,
  5.990748405456543,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/velocity-piano.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  1.0100680589675903,
  2.008526086807251,
  3.006984233856201,
  4.017052173614502,
  5.027120113372803,
  6.0371880531311035,
  7.058866024017334,
]
`;

exports[`Analyze Onsets "test/audio/velocity-saw.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  4.005442142486572,
  5.003900051116943,
  6.013968467712402,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/velocity-sin.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  4.005442142486572,
  5.003900051116943,
  6.025578022003174,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/velocity-square.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  4.005442142486572,
  5.003900051116943,
  6.002358436584473,
  7.999274253845215,
]
`;

exports[`Analyze Onsets "test/audio/velocity-triangle.wav" 1`] = `
Float32Array [
  0.01160997711122036,
  0.9984580278396606,
  1.9969160556793213,
  2.9953742027282715,
  4.005442142486572,
  5.003900051116943,
  6.013968467712402,
  7.999274253845215,
]
`;

exports[`Analyze Scale "test/audio/scale-piano.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale-saw.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale-sin.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale-square.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale-triangle.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale2-piano.wav" 1`] = `"major"`;

exports[`Analyze Scale "test/audio/scale2-saw.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/scale2-sin.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/scale2-square.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/scale2-triangle.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/velocity-piano.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/velocity-saw.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/velocity-sin.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/velocity-square.wav" 1`] = `"minor"`;

exports[`Analyze Scale "test/audio/velocity-triangle.wav" 1`] = `"major"`;

exports[`Analyze Speed "test/audio/scale-piano.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale-saw.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale-sin.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale-square.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale-triangle.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale2-piano.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale2-saw.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale2-sin.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale2-square.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/scale2-triangle.wav" 1`] = `120.18531799316406`;

exports[`Analyze Speed "test/audio/velocity-piano.wav" 1`] = `119.83695983886719`;

exports[`Analyze Speed "test/audio/velocity-saw.wav" 1`] = `119.83695983886719`;

exports[`Analyze Speed "test/audio/velocity-sin.wav" 1`] = `119.83695983886719`;

exports[`Analyze Speed "test/audio/velocity-square.wav" 1`] = `119.83695983886719`;

exports[`Analyze Speed "test/audio/velocity-triangle.wav" 1`] = `119.83695983886719`;
